...
                android:contentDescription="@string/clear_listing_filters"
                android:minHeight="@dimen/min_interactive_target"
                android:text="@string/clear_listing_filters" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/space_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
