...
                    android:layout_marginTop="@dimen/space_8"
                    android:visibility="gone"
                    app:chipSpacingHorizontal="@dimen/space_8"
                    app:chipSpacingVertical="@dimen/space_8" />

                <TextView
                    android:id="@+id/detailSavedState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16"
                    android:background="@drawable/bg_detail_saved_state"
                    android:paddingHorizontal="@dimen/space_12"
                    android:paddingVertical="@dimen/space_8"
...
